# lenovo-ai-assistant-builder

./: .gitattributes  .gitignore  LICENSE.md  README.md  clean_whitespace.ps1  revert_whitespace_files.ps1
demos/translator-vision-demo/: .gitignore  README.md  app.py  requirements.txt
demos/translator-vision-demo/pages/: vision.py
demos/translator-vision-demo/resources/: sample.txt  (+1 more)
example/: README.md  recompile-client-proto.ps1  run-smoke-test.ps1
example/csharp/: CSharpClientExample.csproj  Program.cs  README.md
example/golang/: main.go
example/proto/: superbuilder_service.proto
example/python/: README.md  client.py  superbuilder_middleware_pb2.py  superbuilder_service_pb2.py
example/python-chatPPT/: README.md  api.py  requirements.txt  utils.py
example/python_api_simple/: README.md  api.py  chat.py  superbuilder_service_pb2_grpc.py  utils.py
mcp/: README.md
mcp/mcp_codegen/: McpServerGen.py  README.md
src/oss_info/: rust-cssparser License.txt
src/shared/: AssistantModelConfigSchema.json  superbuilder_middleware.proto
src/superbuilderclient/: .npmrc  DEV-TROUBLESHOOTING.md  README.md  chat-history-external-tool.md  email_window.html  implement-chat-history-logging.md  implement-external-messsages.md  implement-getting-chat-history.md  model_conversion_window.html  modifications.md  new_chat.ts  package-lock.json  package.json  progress.md  receive_external_messages.md  vite.config.js
src/superbuilderclient/src-tauri/: Cargo.toml  build.rs  config.toml  tauri.conf.json
src/superbuilderclient/src-tauri/capabilities/: default.json
src/superbuilderclient/src-tauri/src/: config.rs  grpc_client.rs  lib.rs  main.rs  status.rs
(+188 files in other folders)
